...
        }
      }
    },
    "Indifferent" : {

    },
    "Insights" : {
      "localizations" : {
        "ar-AE" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "رؤى"
          }
...
            "state" : "translated",
            "value" : "正在加载提示..."
          }
        }
      }
    },
    "Lock Entry" : {
      "localizations" : {
        "ar-AE" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "قفل الدخول"
          }
...
            "state" : "translated",
            "value" : "锁定今天的条目"
          }
        }
      }
    },
    "Lock Today's Entry" : {
      "localizations" : {
        "ar-AE" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "قفل دخول اليوم"
          }
...
            "state" : "translated",
            "value" : "请再试一次"
          }
        }
      }
    },
    "Positive" : {

    },
    "Positive ratio %@" : {

    },
    "Positive ratio: %@" : {
...
        }
      }
    },
    "Reset Onboarding" : {

    },
    "Restore Purchases" : {
      "localizations" : {
        "ar-AE" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "استعادة المشتريات"
          }
...
            "state" : "translated",
            "value" : "情绪：%@"
          }
        }
      }
    },
    "Settings" : {
      "localizations" : {
        "ar-AE" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "الإعدادات"
          }
...
        }
      }
    },
    "Time Range" : {

    },
    "Timeline" : {
      "localizations" : {
        "ar-AE" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "خَطّ زَمَنيّ"
          }
...
    "Title" : {

    },
    "Title of your entry" : {

    },
    "Today" : {
      "localizations" : {
        "ar-AE" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "اليوم"
          }
...
            "state" : "translated",
            "value" : "升级到DailyLock Plus。 解锁见解、主题等。"
          }
        }
      }
    },
    "Upgrade to DailyLock+" : {
      "localizations" : {
        "ar-AE" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "قم بالترقية إلى DailyLock+"
          }
...
    "Upgrade your writing experience with these beautifully crafted paper textures." : {

    },
    "Uses AI to generate a summary of your last 7 days of entries. Requires DailyLock+." : {

    },
    "Version" : {
      "localizations" : {
        "ar-AE" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "نُسْخة"
          }
...
            "state" : "translated",
            "value" : "写下定义了你一天的内容。 最大%lld字符。"
          }
        }
      }
    },
    "Write First Entry" : {
      "localizations" : {
        "ar-AE" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "اكتب الإدخال الأول"
          }
...
