...
                    TextView(
                        title: $title, detail: $currentDetail, reflectionPrompt: journalingSuggestionVM.firstReflectionPrompt, haptics: haptics,
                        sentiment: selectedSentiment,
                        opacity: inkOpacity,
                        isFocused: isTextFieldFocused
                    )
                    .accessibilityIdentifier("entryTextView")
                    .accessibilityLabel("Text entry for today")
                    .frame(height: textViewHeight)
                    .padding(.horizontal, horizontalPadding)
                    .onChange(of: currentDetail) { oldValue, newValue in
                        handleTextChange(oldValue: oldValue, newValue: newValue)
                    }
...
