//
//  TimelineUITests.swift
//  DailyLockUITests
//
//  Created by Gerard Gomez on 7/28/25.
//

import Foundation
import XCTest

//@MainActor
//final class TimelineUITests: XCTestCase {
//    
//    var app: XCUIApplication!
//    
//    override func setUpWithError() throws {
//        
//        continueAfterFailure = false
//        
//        app = XCUIApplication()
//        app.launchArguments = [ "enable-testing", "skipOnboarding"]
//        app.launch()
//    }
//    
//    func testTimelineWorks() {
//        app.buttons["Timeline"].firstMatch.tap()
//        app.images["chevron.up"].firstMatch.tap()
//        app.images["chevron.down"].firstMatch.tap()
//        app.staticTexts.matching(identifier: "Lost motivation and skipped tasks.").element(boundBy: 0).tap()
//        app.buttons["Close"].firstMatch.tap()
//        
//        
//    }
//}
